// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CTAButton 컴포넌트 테스트 > CTAButton 스냅샷 테스트 > size 속성이 large일 때 스냅샷이 일치한다. 1`] = `
<button
  class="css-31taz"
>
  버튼
</button>
`;

exports[`CTAButton 컴포넌트 테스트 > CTAButton 스냅샷 테스트 > size 속성이 medium일 때 스냅샷이 일치한다. 1`] = `
<button
  class="css-1j4x9ye"
>
  버튼
</button>
`;

exports[`CTAButton 컴포넌트 테스트 > CTAButton 스냅샷 테스트 > size 속성이 small일 때 스냅샷이 일치한다. 1`] = `
<button
  class="css-321mqb"
>
  버튼
</button>
`;
